--- a/js/package.json
+++ b/js/package.json
@@ -13,7 +13,7 @@
     "jquery": "^3.5.1",
     "jquery.hotkeys": "^0.1.0",
     "lodash-es": "^4.17.14",
-    "m.attrs.bidi": "github:tobscure/m.attrs.bidi",
+    "m.attrs.bidi": "github:askvortsov1/m.attrs.bidi",
     "mithril": "^2.0.4",
     "punycode": "^2.1.1",
     "spin.js": "^3.1.0",
